fixing dark mode on layout docs

--- a/apps/docs/src/content/css/components/_components/layout/layout-demo.css
+++ b/apps/docs/src/content/css/components/_components/layout/layout-demo.css
@@ -34,7 +34,7 @@
     }
 
     .layout-demo-sidebar {
-      background: var(--wui-color-grey-3);
+      background: var(--wui-layout-demo-sidebar-background);
       border-right: var(--wui-border-width-1) solid var(--wui-color-grey-5);
       border-top-left-radius: var(--wui-layout-demo-border-radius);
       border-bottom-left-radius: var(--wui-layout-demo-border-radius);
@@ -42,7 +42,7 @@
       left: 0;
 
       &:is([data-state="open"], [data-state="closed"]) {
-        background: var(--wui-color-white);
+        background: var(--wui-layout-demo-sidebar-background-open);
         border-right: var(--wui-border-width-1) solid var(--wui-color-grey-5);
         box-shadow: var(--wui-shadow-3);
         top: 0;
@@ -59,7 +59,7 @@
       }
 
       @media (prefers-reduced-motion: no-preference) {
-        transition-property: background, left, top, height;
+        transition-property: left, top, height;
         transition-duration: var(--wui-duration-4);
         transition-timing-function: var(--wui-bezier-1);
         will-change: left, top, height;
@@ -67,7 +67,7 @@
     }
 
     .layout-demo-content {
-      background: var(--wui-color-white);
+      background: var(--wui-layout-demo-content-background);
       border-radius: var(--wui-layout-demo-border-radius);
     }
   }
@@ -92,6 +92,32 @@
     &:focus-visible {
       outline: var(--wui-border-width-2) solid var(--wui-color-accent-8);
       outline-offset: 2px;
+    }
+  }
+}
+
+[data-theme="light"] {
+  .layout-demo {
+    .layout-demo-sidebar {
+      --wui-layout-demo-sidebar-background: var(--wui-color-grey-3);
+      --wui-layout-demo-sidebar-background-open: var(--wui-color-white);
+    }
+
+    .layout-demo-content {
+      --wui-layout-demo-content-background: var(--wui-color-white);
+    }
+  }
+}
+
+[data-theme="dark"] {
+  .layout-demo {
+    .layout-demo-sidebar {
+      --wui-layout-demo-sidebar-background: var(--wui-color-grey-1);
+      --wui-layout-demo-sidebar-background-open: var(--wui-color-grey-1);
+    }
+
+    .layout-demo-content {
+      --wui-layout-demo-content-background: var(--wui-color-grey-2);
     }
   }
 }
